# NBAHighlightsMaker

./: .gitignore  LICENSE  README.md  pyproject.toml
NBAHighlightsMaker/: main.py  test.py
NBAHighlightsMaker/common/: enums.py
NBAHighlightsMaker/downloader/: downloader.py
NBAHighlightsMaker/editor/: editor.py
NBAHighlightsMaker/players/: getplayers.py
NBAHighlightsMaker/scraper/: scraper.py  scraper2.py
NBAHighlightsMaker/tests/integration/: test_downloader_integration.py  test_get_players_integration.py
NBAHighlightsMaker/ui/: game_log_table.py  player_search.py  ui.py
highlights_maker/players/: getplayers.py
highlights_maker/scraper/: scraper2.py
