[project]
name = "nbahighlightsmaker"
version = "0.1.0"
description = "Create NBA Highlights"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "selenium >= 4.28.1",
    "zendriver (>=0.4.3,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nba-api (>=1.7,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "moviepy (>=2.1.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
