[project]
name = "nbahighlightsmaker"
version = "0.1.0"
description = "Create NBA Highlights"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "selenium >= 4.28.1",
    "zendriver (>=0.4.3,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nba-api (>=1.7,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "qasync (>=0.27.1,<0.28.0)",
    "moviepy (==1.0.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
