[project]
name = "nbahighlightsmaker"
version = "0.1.0"
description = "Create NBA Highlights"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "nba-api (>=1.7,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "qasync (>=0.27.1,<0.28.0)",
    "moviepy (==1.0.3)",
    "proglog (>=0.1.12,<0.2.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pyinstaller = "^6.17.0"

[tool.poetry.requires-plugins]
poetry-pyinstaller-plugin = { version = ">=2.0.0,<3.0.0", extras = ["plugin"] }

[tool.poetry-pyinstaller-plugin.targets.nba-highlights-maker]
source = "NBAHighlightsMaker/main.py"
type = "onefile"
windowed = true
icon = "../../../../resources/favicon.ico"
collect = {"data" = ["fake_useragent"] }
include = {"resources/favicon.ico" = "resources" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
